[package]
name = "process-memory"
version = "0.4.0"
authors = ["Tommoa <tommoa256@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "A rust library that can read/write the memory of other processes."
repository = "https://github.com/Tommoa/rs-process-memory"
edition = "2018"

[[example]]
name = "fastyboy"
crate-type = ["bin"]

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["tlhelp32"] }

[dependencies]
libc = "0.2"

[target.'cfg(target_os="macos")'.dependencies]
mach = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnt", "memoryapi", "minwindef", "processthreadsapi", "tlhelp32", "wow64apiset", "handleapi"] }
