[package]
name = "process-memory"
version = "0.5.0"
authors = ["Tommoa <tommoa256@gmail.com>"]
readme = "README.md"
license = "MIT"
description = "A rust library that can read/write the memory of other processes."
repository = "https://github.com/Tommoa/rs-process-memory"
edition = "2018"

[[example]]
name = "fastyboy"
crate-type = ["bin"]

# Feature needed in the fastyboy example to get the pid of a process by name
[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.43.0", features = [
    "Win32_System_Diagnostics_ToolHelp",
] }

[dependencies]
libc = "0.2"

[target.'cfg(target_os="macos")'.dependencies]
mach = "0.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.43.0", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
] }
